# lpproying-backend

./: .gitignore  Procfile  db.sqlite3  main.py  pyproject.toml  requirements.txt  start.py
src/: .env  db.sqlite3  settings.py  wsgi.py
src/company/: admin.py  models.py
src/company/migrations/: 0001_initial.py  0002_company_address.py  0002_contactrequest.py  0003_rename_subjetc_contactrequest_subject.py  0004_alter_contactrequest_company_and_more.py
src/core/: settings.py  urls.py
src/service/: admin.py  models.py
src/service/migrations/: 0001_initial.py  0002_gallery.py  0003_rename_gallery_image.py  0004_rename_servicefeature_feature.py  0005_image_description.py
src/slide/: admin.py  apps.py  models.py
src/slide/migrations/: 0001_initial.py  0002_slide_href_slide_text.py  0003_slide_description_slide_title_alter_slide_href_and_more.py
src/utils/django/: model_admin.py
