[project]
name = "lpproying-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "boto3>=1.38.41",
    "django>=5.2.1",
    "django-admin-rangefilter>=0.13.2",
    "django-jazzmin>=3.0.1",
    "django-storages>=1.14.6",
    "gunicorn>=23.0.0",
    "openpyxl>=3.1.5",
    "pillow>=11.2.1",
    "psycopg[binary]>=3.2.9",
    "ruff>=0.11.9",
    "whitenoise>=6.9.0",
]
